--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "Workshop OSS (TypeScript)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+      "ts:style": "npm run ts:format && npm run ts:lint",
+      "ts:style:fix": "npm run ts:format:fix && npm run ts:lint:fix",
+      "ts:lint": "tslint \"src/**/*.ts\"",
+      "ts:lint:fix": "npm run ts:lint -- --fix",
+      "ts:format": "tsfmt --verify",
+      "ts:format:fix": "tsfmt -r"
+    },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Artmadiar/starwars-names-artmadiar.git"
