--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Workshop OSS (TypeScript)",
   "main": "index.js",
   "scripts": {
-      "ts:style": "npm run ts:format && npm run ts:lint",
-      "ts:style:fix": "npm run ts:format:fix && npm run ts:lint:fix",
-      "ts:lint": "tslint \"src/**/*.ts\"",
-      "ts:lint:fix": "npm run ts:lint -- --fix",
-      "ts:format": "tsfmt --verify",
-      "ts:format:fix": "tsfmt -r"
-    },
+    "ts:style": "npm run ts:format && npm run ts:lint",
+    "ts:style:fix": "npm run ts:format:fix && npm run ts:lint:fix",
+    "ts:lint": "tslint \"src/**/*.ts\"",
+    "ts:lint:fix": "npm run ts:lint -- --fix",
+    "ts:format": "tsfmt --verify",
+    "ts:format:fix": "tsfmt -r"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Artmadiar/starwars-names-artmadiar.git"
@@ -26,5 +26,9 @@
     "tslint-config-standard": "^4.0.0",
     "typescript": "^2.2.2",
     "typescript-formatter": "^5.1.2"
+  },
+  "dependencies": {
+    "@types/lodash": "^4.14.58",
+    "lodash": "^4.17.4"
   }
 }
